smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-must-come-before-namespace.smithy
// Syntax error at line 5, column 1: Unknown shape type: metadata | Model
$version: "2.0"
namespace com.foo

metadata foo = "hello"
